# ProxyScope

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: check.rs  detect.rs  geoip.rs  lib.rs  parse.rs  proxy.rs  rotation.rs  scan.rs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
