# Workspace manifest. The proxy logic lives in `core` (UI-agnostic) and the
# desktop shell lives in `src-tauri`, keeping a clean separation of concerns.
[workspace]
resolver = "2"
members = ["core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hasoftware <hoanganhuet@hotmail.com>"]
repository = "https://github.com/hasoftware/ProxyScope"
# License is intentionally left unset until the author confirms the model.
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optimize dependencies even in dev builds; Tauri apps are sluggish otherwise.
[profile.dev.package."*"]
opt-level = 2
