# Workspace manifest. The proxy logic lives in `core` (UI-agnostic) and the
# desktop shell lives in `src-tauri`, keeping a clean separation of concerns.
[workspace]
resolver = "2"
members = ["core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hasoftware <hoanganhuet@hotmail.com>"]
repository = "https://github.com/hasoftware/ProxyScope"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "socks",
    "rustls-tls",
] }
tokio-socks = "0.5"
maxminddb = "0.24"

# Optimize dependencies even in dev builds; Tauri apps are sluggish otherwise.
[profile.dev.package."*"]
opt-level = 2
