[package]
name = "proxyscope-core"
description = "UI-agnostic proxy parsing, protocol detection, and checking for ProxyScope"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-socks = { workspace = true }
maxminddb = { workspace = true }
