[package]
name = "proxyscope"
description = "ProxyScope — a desktop proxy-checking tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
default-run = "proxyscope"

# The library target is what Tauri's mobile/desktop entry points link against;
# the binary target is a thin wrapper that calls into it.
[lib]
name = "proxyscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
proxyscope-core = { path = "../core" }
